Fix overflow in layout container

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   width: 100vw;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .container {
